--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" }
-  ],
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/index.html" }
+    { "source": "/((?!api).*)", "destination": "/index.html" }
   ],
   "functions": {
     "api/**/*.js": {
